styles/2_style.styl
@import "0_variables.styl"

html, body
  width 100%
  min-height 100%
  transition ease-in-out background-color .3s

html
  font-size 16px

body
  font 1rem bodyFont
  margin 0
  padding 0
  background white

h1, h2, h3
  font-family titleFont

p, ol, ul
  line-height 1.5em
  margin 1.5rem 0

p
  &:first-child
    margin-top 0
  &:last-child
    margin-bottom 0

ul
  list-style-type square

img
  vertical-align middle

iframe
  border none

address
  font-style normal

a
  color #1D78B4
  text-decoration none
  &:hover
    color #1D78B4
    text-decoration underline

#page
  box-shadow -2px 0 20px rgba(0,0,0,.2)
  background white
  transition ease-in-out .2s

.container
  width 940px
  margin 0 auto
  & > .block-large
    &:last-child
      border none

#not-found
  text-align center
  background #d33
  color white
  border solid 20px white
  box-shadow 0 0 4px rgba(0,0,0,.4)
  margin 40px 0
  padding 80px
  text-transform uppercase
  img
    width 100%
  p
    font-size 24px
  a
    border solid 1px white
    border-radius 25px
    padding 5px 15px
    color white
  h1
    font-size 72px
    margin 0

.hidden
  display none !important
  visibility hidden

.nowrap
  white-space nowrap

.readmore
  transition all .2s ease-out
  &:before
    content ""
  &:after
    content " »"
    margin-left 6px
    display inline-block

.block-text
  padding 40px 0
  border-bottom solid #ccc 1px

.block-text h1,
.blog h1
  font-size 2.5rem
  margin 20px 0

.block-full
  position relative
  border-bottom solid #ccc 1px
  padding 80px 0

.intro-outro
  display block
  text-align center
  padding 80px 0
  p
    font-size 1.3rem
  h1
    font-size 3rem
    text-align center
    margin 0

.block-large
  padding 80px 0
  displayFlex()

  &.block-no-padding-after
    padding-bottom 0
    & + .block-large
      padding-top 40px

  & > .body
    doFlex 2
    margin-right 20px

    h2
      margin-bottom 0
      & + h3
        margin-top 0

    h3
      font normal 14px/1.5 bodyFont
      color rgba(0,0,0,.5)
    p
      &:last-child
        margin-bottom 1.5rem

  .visual
    doFlex 3
    position relative

  &.right
    .body
      doFlex 2
      order 2
      margin-right 0
      margin-left 20px
    .visual
      doFlex 3

  .intro
    doFlex 5
    margin 0 32px 0 0
    h3
      font-weight normal
    .visual
      margin-bottom 15px

section h1,
.block-large h1
  text-align left

section h2,
.block-large > .body h2
  font-size 40px
  margin-top 0

.block-readmore
  text-align right

// http://stackoverflow.com/questions/8720931/can-css-detect-the-number-of-children-an-element-has
.block-large > .block-small:first-child:nth-last-child(2),
.block-large > .block-small:first-child:nth-last-child(2) ~ div
  max-width 33.3333%

.block-small
  doFlex 1
  margin 0 20px 0 0
  &:last-child
    margin-right 0
    padding 0

  h2
    a
      color black
  h3
    font normal 14px/1.5 bodyFont
    margin-top 0
    color rgba(0,0,0,.5)

  .visual
    position relative
    width 300px
    overflow hidden
    img
      width 300px
      height 160px
    & + .body h2
      padding-top 20px
      margin-bottom 0

.subcontent
  doFlex 2
  padding 20px
  color rgba(0,0,0,.5)
  font-family serifTitleFont
  h2
    font-family serifTitleFont
    font-weight normal
    padding-top 0

#loading
  text-align center
  padding 100px 0
  position fixed
  top 265px
  left 0
  right 0
  bottom 0
  z-index 99999
  background #fff
  img
    width 128px
    animation fadeIn ease .2s

.visual
  img, iframe
    width 100%
  &.caption
    display block
    overflow hidden
    p
      position absolute
      z-index 999
      margin 0
      padding 4px 12px
      width 100%
      background-color #232323
      color #FFF
      font-size 80%
      text-decoration none
      fontSmoothing antialiased

a.caption,
.visual.caption, .visual.caption p, .visual.caption img
  text-decoration none

.block-with-icons
  ul
    margin-bottom 0px
    li
      &:last-child
        padding-bottom 0px
  h2
    margin-top 0px
  .iconList
    padding 0

.iconList
  li
    displayFlex()
    alignItems center
    overflow hidden
    padding 0 0 8px 0px
    list-style-type none
    i
      min-width 40px
    div
      margin-left 12px
  &.no-text
    displayFlex()
    justifyContent space-between
    li
      div
        display none
        padding 0
    a
      color inherit !important
      &:hover
        color #88c546 !important
        text-decoration none !important


.q42-logo
  a
    display inline-block

  object, img
    width 129px
    height 180px
    pointer-events none

